Fixed a style bug that cropped up after removing the app border.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -315,7 +315,7 @@ div#deck-builder
   input#deckName
     outline: none
     position: absolute
-    left: 16px
+    left: 22px
     bottom: 1px
     border: none
     width: 135px
@@ -329,7 +329,7 @@ div#deck-builder
      font-size: smaller
      position: absolute
      bottom: 2px
-     right: 16px
+     right: 22px
      background-color: #000
      padding: 5px
      border-radius: 10px 0 10px 0 
